--- a/src/sections/02_related.tex
+++ b/src/sections/02_related.tex
@@ -1,15 +1,24 @@
 \section{関連研究}
-% Content here
 
-\subsection{関連研究1}
-% Content here
+\subsection{〇〇に関する研究}
+% サンプル文章（実際の論文では削除してください）
+〇〇に関する研究として、Aらの手法\cite{sample_ref1}が挙げられる。
+この手法では、△△を用いることで□□を実現している。
+しかし、××という制約があるため、本研究とは異なるアプローチである。
 
-\subsection{関連研究2}
-% Content here
+\subsection{△△に関する研究}
+% サンプル文章（実際の論文では削除してください）
+△△の分野では、Bらの研究\cite{sample_ref2}が代表的である。
+彼らは□□という手法を提案し、高い精度を達成している。
+本研究では、この手法の考え方を参考にしつつ、新たな改良を加える。
 
-\subsection{関連研究3}
-% Content here
-
+\subsection{既存研究の課題}
+% サンプル文章（実際の論文では削除してください）
+上記の研究は一定の成果を上げているものの、以下の課題が残されている。
+\begin{itemize}
+\item 課題1：〇〇への対応が不十分
+\item 課題2：△△のコストが高い
+\item 課題3：□□の汎用性が低い
+\end{itemize}
 \subsection{本研究の位置づけ}
 % Content here
-
