--- a/src/sections/05_experiment.tex
+++ b/src/sections/05_experiment.tex
@@ -1,36 +1,57 @@
 \section{実験}
-% Content here
 
 \subsection{評価指標}
-% Content here
+% サンプル文章（実際の論文では削除してください）
+提案手法の性能評価には、以下の指標を用いる。
+\begin{itemize}
+\item 精度（Accuracy）：正解率
+\item 再現率（Recall）：検出率
+\item F値（F-measure）：精度と再現率の調和平均
+\end{itemize}
 
 \subsection{実験データ}
-% Content here
+% サンプル文章（実際の論文では削除してください）
+実験には、公開データセット〇〇を使用した。
+データセットは訓練データ1000件、テストデータ500件で構成される。
 
 \subsection{実験1}
-% Content here
+% サンプル文章（実際の論文では削除してください）
 
 \subsubsection{目的}
-% Content here
+実験1では、提案手法の基本性能を評価する。
 
 \subsubsection{評価方法}
-% Content here
+テストデータに対する精度を測定し、ベースライン手法と比較する。
 
 \subsubsection{結果}
-% Content here
+表\ref{tab:exp1_result}に結果を示す。
+提案手法はベースライン手法と比較して、精度が5\%向上した。
+% \begin{table}[h]
+% \centering
+% \caption{実験1の結果}
+% \label{tab:exp1_result}
+% \begin{tabular}{lcc}
+% \hline
+% 手法 & 精度 & F値 \\
+% \hline
+% ベースライン & 0.85 & 0.83 \\
+% 提案手法 & 0.90 & 0.88 \\
+% \hline
+% \end{tabular}
+% \end{table}
 
 \subsection{実験2}
-% Content here
+% サンプル文章（実際の論文では削除してください）
 
 \subsubsection{目的}
-% Content here
+実験2では、処理速度を評価する。
 
 \subsubsection{評価方法}
-% Content here
+1000件のデータ処理にかかる時間を測定する。
 
 \subsubsection{結果}
-% Content here
+提案手法の処理時間は平均2.3秒であり、ベースライン手法の4.5秒と比較して約2倍高速化された。
 
 \subsection{まとめ}
-% Content here
-
+% サンプル文章（実際の論文では削除してください）
+実験の結果、提案手法は精度と処理速度の両面で既存手法を上回ることが確認された。
